<resources>
    <string name="app_name">FOSS</string>
    <string name="foss_business">FOSS Business</string>
    <string name="fossB">FOSS BUSINESS</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="ttile_Explaination">Food Ordering System by Santhosh</string>
    <string name="enter_phoneNumber">Phone Number</string>
    <string name="enter_password">Password</string>
    <string name="loginButton">login</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="newAccountText">Don\'t have an account?</string>
    <string name="registerButton">Sign Up</string>
    <string name="send_otp">Send OTP</string>
    <string name="solgan">Fast - Fresh - Instant</string>
    <string name="enterotpNumber">OTP Number</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="confirm">Confirm OTP</string>
    <string name="Details_Tile">Personal Details\n\nTell us a bit more about yourself</string>
    <string name="enterName">Name</string>
    <string name="con">continue</string>
    <string name="location">Location</string>
    <string name="enter_mail">Email</string>
    <string name="create_your_account">Create Your Business Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">SignUp</string>
    <string name="verify_your_e_mail_address">Verify Your E-mail Address</string>
    <string name="sentence">Thank You for using FOSS!. Click the Link that we have send to your email address to complete your SignUp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="enteritem">Item Name</string>
    <string name="addMenu">Add Menu</string>
    <string name="price">Price</string>
    <string name="ItemQ">Quantity</string>
    <string name="saveb">Save</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="additem">Add Item</string>
    <string name="itemName">Item Name</string>
    <string name="my_menu">My Menu</string>
    <string name="add_menu">Add Menu</string>
    <string name="orders">Orders</string>
    <string name="cancel">cancel</string>
    <string name="app_namewl">FOSS\nlocation</string>
    <string name="menu">Menu</string>
    <string name="my_orders">My Orders</string>
    <string name="customerNames">Customer Names</string>
    <string name="menush">Menu (Click to Order)</string>
    <string name="todo">TODO</string>
    <string name="status_delivery_soon">Status: Delivery Soon</string>
    <string name="rs_10">Rs.10</string>
</resources>
