<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.DetailPage">

    <TextView
        android:id="@+id/DetailsTitle"
        android:padding="20dp"
        android:text="@string/Details_Tile"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/UserName"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24sp"
        android:hint="@string/enterName"
        android:textColorHint="@android:color/black"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:layout_above="@id/UserEmail"
        android:background="@drawable/edit_text_bg2"
        android:padding="20dp"
        android:inputType="textPersonName"
        android:importantForAutofill="no"/>
    <EditText
        android:id="@+id/UserEmail"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_mail"
        android:textColorHint="@android:color/black"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:layout_marginBottom="24sp"
        android:layout_above="@id/location"
        android:background="@drawable/edit_text_bg2"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/location"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:textColorHint="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textColor="@android:color/black"
        android:background="@drawable/edit_text_bg2"
        android:inputType="textPostalAddress"
        android:padding="20dp"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/continueButton"
        android:layout_below="@id/location"
        android:layout_margin="24sp"
        android:text="@string/con"
        android:paddingLeft="16sp"
        android:paddingRight="16sp"
        android:paddingTop="8sp"
        android:paddingBottom="8sp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:background="@drawable/buttonbw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</RelativeLayout>