<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="18dp"
    app:cardElevation="10dp"
    android:background="@drawable/cardbg">

    <RelativeLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cardbg">

        <TextView
            android:id="@+id/CustomerNames"
            android:text="@string/customerNames"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:maxLines="1"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:ellipsize="end"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/CustomerLocations"
            android:text="@string/location"
            android:layout_width="wrap_content"
            android:layout_below="@id/CustomerNames"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:paddingTop="3sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/CustomerPhones"
            android:text="@string/enter_phoneNumber"
            android:layout_width="wrap_content"
            android:layout_below="@id/CustomerLocations"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:paddingTop="3sp"
            android:paddingBottom="6sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/ItemNameViewO"
            android:text="@string/itemName"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_below="@id/CustomerPhones"
            android:paddingBottom="3sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/itemQuantityViewO"
            android:text="@string/ItemQ"
            android:layout_below="@id/ItemNameViewO"
            android:layout_alignParentStart="true"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>