<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="18dp"
    app:cardElevation="10dp"
    android:background="@drawable/cardbg">

    <RelativeLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cardbg">

        <TextView
            android:id="@+id/ItemNameViewC"
            android:text="@string/itemName"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:maxLines="1"
            android:layout_toStartOf="@id/itemPriceViewC"
            android:layout_alignParentStart="true"
            android:ellipsize="end"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/itemPriceViewC"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/itemPriceViewC"
            android:text="@string/rs_10"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />

        <TextView
            android:id="@+id/itemQuantityViewC"
            android:text="@string/ItemQ"
            android:layout_below="@id/ItemNameViewC"
            android:layout_alignParentStart="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/stat"
            android:text="@string/status_delivery_soon"
            android:layout_alignParentRight="true"
            android:layout_below="@id/itemPriceViewC"
            android:layout_marginTop="6sp"
            android:textColor="@android:color/holo_green_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>