<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".UI.UserSignup">

    <TextView
        android:id="@+id/verifyCodeTitle"
        android:text="@string/enter_verification_code"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="18sp"
        android:background="@color/purple1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/blablatext"
        android:layout_below="@id/verifyCodeTitle"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:layout_margin="24sp"
        android:text="We have sent a verification code to "
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/phoneNOTEXT"
        android:layout_below="@id/blablatext"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:layout_margin="8sp"
        android:text="+91-1234567890"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/otpNumber"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="19sp"
        android:hint="@string/enterotpNumber"
        android:textColorHint="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textColor="@android:color/black"
        android:background="@drawable/edit_text_bg2"
        android:inputType="number"
        android:padding="20dp"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/confirmOTP"
        android:layout_below="@id/otpNumber"
        android:layout_margin="24sp"
        android:text="@string/confirm"
        android:layout_centerHorizontal="true"
        android:padding="12sp"
        android:textColor="@android:color/black"
        android:background="@drawable/buttonbw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:id="@+id/progessBar"
        android:layout_below="@id/confirmOTP"
        android:layout_centerHorizontal="true"
        android:layout_margin="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</RelativeLayout>